# leo_erc_desktop

./: LICENSE
leo_erc_gazebo/: CMakeLists.txt  package.xml
leo_erc_gazebo/config/: controllers.yaml  pdu.yaml
leo_erc_gazebo/config/zed2/: left_cam_imu_transform.yaml
leo_erc_gazebo/launch/: leo_gazebo.launch  leo_marsyard.launch  leo_marsyard2020.launch  leo_marsyard2021.launch  leo_marsyard2022.launch  spawn_controllers.launch  spawn_model.launch  spawn_robot.launch
leo_erc_gazebo/scripts/: ground_truth_filter  odom_compat_node  pdu_node  zed2_imu_transform_broadcaster
leo_erc_gazebo_worlds/: CMakeLists.txt  package.xml
leo_erc_gazebo_worlds/models/marsyard2020_terrain/: model.sdf
leo_erc_gazebo_worlds/sdf/: landmark.sdf.xacro
leo_erc_gazebo_worlds/worlds/: marsyard2020.world.xacro  marsyard2022.world.xacro
leo_erc_viz/: CMakeLists.txt  package.xml
leo_erc_viz/launch/: rviz.launch  view_model.launch
leo_erc_viz/rviz/: robot.rviz
