<?xml version="1.0"?>
<package format="2">
  <name>leo_erc_viz</name>
  <version>0.0.0</version>
  <description>
    Visualization launch files and RViz configurations for Leo Rover (ERC edition)
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <url type="bugtracker">https://github.com/LeoRover/leo_erc_desktop/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_erc_desktop</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>leo_erc_description</exec_depend>
</package>
